@@ -4619,3 +4619,5 @@ Changelog for GXemul:
 		Enabling ELF file support for 88K experiments.
 20140805	Fixing color bug in dev_pvr.cc simpleline, which is used when
 		rendering Gouraud shaded triangles.
+20140810	Beginning on disassembly of ARM THUMB (16-bit) encoding.
+
